<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
            app:startDestination="@id/splashFragment">

    <fragment android:id="@+id/splashFragment" android:name="com.chrisfry.linq.SplashFragment"
              android:label="fragment_splash" tools:layout="@layout/fragment_splash">
        <action android:id="@+id/action_splashFragment_to_loginFragment"
                app:destination="@id/loginFragment"
                app:launchSingleTop="true"
                app:popUpTo="@id/splashFragment"
                app:popUpToInclusive="true" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action android:id="@+id/action_splashFragment_to_linkDisplayFragment"
                app:destination="@id/linkDisplayFragment"
                app:launchSingleTop="true"
                app:popUpTo="@id/splashFragment"
                app:popUpToInclusive="true" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment android:id="@+id/loginFragment" android:name="com.chrisfry.linq.userinterface.fragments.LoginFragment"
              android:label="@string/app_name" tools:layout="@layout/fragment_login">
        <action android:id="@+id/action_loginFragment_to_linkDisplayFragment"
                app:destination="@id/linkDisplayFragment"
                app:launchSingleTop="true"
                app:popUpTo="@id/loginFragment"
                app:popUpToInclusive="true" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment android:id="@+id/linkDisplayFragment"
              android:name="com.chrisfry.linq.userinterface.fragments.LinkDisplayFragment"
              android:label="@string/app_name" tools:layout="@layout/fragment_link_display">
        <action android:id="@+id/action_linkDisplayFragment_to_editLinkFragment"
                app:destination="@id/editLinkFragment"/>
        <action android:id="@+id/action_linkDisplayFragment_to_newLinkFragment" app:destination="@id/newLinkFragment"/>
        <action android:id="@+id/action_linkDisplayFragment_to_settingsFragment"
                app:destination="@id/settingsFragment" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment android:id="@+id/newLinkFragment" android:name="com.chrisfry.linq.userinterface.fragments.LinkFragment"
              android:label="@string/new_link" tools:layout="@layout/fragment_new_link"/>

    <fragment android:id="@+id/editLinkFragment" android:name="com.chrisfry.linq.userinterface.fragments.LinkFragment"
              android:label="@string/edit_link" tools:layout="@layout/fragment_edit_link"/>

    <fragment android:id="@+id/settingsFragment" android:name="com.chrisfry.linq.SettingsFragment"
              android:label="@string/settings" tools:layout="@layout/fragment_settings">
        <action android:id="@+id/action_settingsFragment_to_loginFragment"
                app:destination="@id/loginFragment"
                app:launchSingleTop="true"
                app:popUpTo="@id/linkDisplayFragment"
                app:popUpToInclusive="true"
                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
</navigation>